# agentic-environment

./: .gitignore  .oxfmtrc.json  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  compose.yml  eslint.config.js  manage.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.js
backend/core/: settings.py  test_views.py  urls.py  views.py
backend/core/templates/: index.html
frontend/app1/: package.json  vite.config.js
frontend/app1/src/: Button.js  index.js
frontend/pynotebook/: package.json  vite.config.js
frontend/pynotebook/src/: Notebook.js  index.js  main.js
frontend/shell/: package.json  vite.config.js
frontend/shell/src/: index.js
frontend/src/: main.ts
frontend/src/components/: markdown-editor.ts  monaco-editor.ts  notebook-cell.ts  notebook-editor.ts
notebook_app/: admin.py  apps.py  models.py  urls.py  views.py
notebook_app/migrations/: 0001_initial.py  0002_notebookcell_type.py
notebook_app/templates/notebook_app/: base.html  notebook_detail.html  notebook_list.html
notebook_project/: asgi.py  settings.py  urls.py  wsgi.py
