[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "pre-commit>=4.6.0",
    "psycopg[binary]>=3.3.4",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "redis>=7.4.0",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
pythonpath = ["backend"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

